Add description to metadata

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "apw_nodes"
-description = ""
+description = "A custom node suite to augment the capabilities of the [AP Workflows for ComfyUI](https://perilli.com/ai/comfyui/)"
 version = "1.0.0"
 license = {file = "LICENSE"}
 
@@ -11,4 +11,4 @@ Repository = "https://github.com/alessandroperilli/apw_nodes"
 [tool.comfy]
 PublisherId = "perilli"
 DisplayName = "apw_nodes"
-Icon = ""  
+Icon = ""
